Make various null check improvements and misc fixes